# R-Pilot

./: .env.example  .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  README.md  bun.lockb  docker-compose.yml  package.json  turbo.json
apps/api/: package.json
apps/api/services/: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
apps/api/services/services/auth/: welcome.py
apps/api/services/services/interpreter/: r_interpreter.py  service.py
apps/api/services/services/llm/: selector.py  service.py
apps/api/services/services/llm/gpt/: gpt.py  gpt_azure.py  gpt_openai.py  parsing.py  prompt.py
apps/api/services/services/utils/: env_var.py
apps/api/services/tests/: test_r_interpreter.py
apps/web/: .env.local.example  .eslintrc.json  Dockerfile  next.config.mjs  package.json  tailwind.config.ts
apps/web/src/app/: authentication.tsx  globals.css  layout.tsx  page.tsx  services.ts
apps/web/src/app/api/files/[...path]/: route.ts
apps/web/src/app/api/upload/: route.ts
apps/web/src/app/helper/: scroller.tsx
apps/web/src/app/session/: session.tsx  session_manager.tsx
apps/web/src/app/session/approval/: approver.tsx  interpreter_io.tsx  running.tsx
apps/web/src/app/session/chat/: brand.tsx  chat_history.tsx  chat_input.tsx  header.tsx
apps/web/src/app/session/communication/: chat_round.tsx  interpreter.tsx  llm.tsx
apps/web/src/components/: theme-provider.tsx
apps/web/src/components/ui/: animated-shiny-text.tsx  input.tsx  letter-pullup.tsx
apps/web/src/types/: env.d.ts
scripts/: setup.js
